--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "echarts": "^5.5.0",
     "echarts-liquidfill": "^3.1.0",
     "element-plus": "^2.5.6",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
@@ -32,6 +33,7 @@
     "@babel/eslint-parser": "^7.23.10",
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.2",
+    "@types/lodash": "^4.14.202",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
     "@vitejs/plugin-vue": "^5.0.3",
